# foundry-mpc

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  lerna.json  package.json  rust-toolchain  tsconfig.json
foundry-mpc-rs/: Cargo.toml  readme.md
foundry-mpc-rs/src/: lib.rs
foundry-mpc-rs/src/keyshares/: mod.rs
foundry-mpc-rs/src/sss/: mod.rs  test.rs
foundry-mpc-rs/src/sss_ed25519/: combine.rs  mod.rs  test.rs
foundry-mpc-ts/: jest.config.mjs  package.json
foundry-mpc-wasm/: .gitignore  package.json
foundry-mpc-wasm/src/: index.ts
foundry-mpc-wasm/wasm/: Cargo.toml  rust-toolchain.toml
foundry-mpc-wasm/wasm/src/sss/: combine.rs  split.rs
foundry-mpc-wasm/wasm/src/sss_ed25519/: combine.rs  mod.rs  split.rs
frost-core/: Cargo.toml
frost-ed25519/: Cargo.toml
frost-rerandomized/: Cargo.toml
plans/: compat_pkgs.md
scripts/ci/: package.json  tsconfig.json
scripts/ci/src/: main.ts
sssui/: Cargo.toml
sssui-ecdsa-rs/: Cargo.toml
sssui-ecdsa-rs/src/: math.rs
sssui-ed25519-rs/: Cargo.toml
sssui-mpc-rs/: Cargo.toml  readme.md
sssui-mpc-rs/src/: lib.rs
sssui-mpc-rs/src/sss/: combine.rs
sssui-mpc-ts/: package.json  tsconfig.json
sssui-mpc-ts/src/: index.ts  init.ts
sssui-rs/: Cargo.toml
sssui-rs/src/: lib.rs  serde.rs
sssui-rs/src/compat/: mod.rs
sssui-rs/src/sss/: combine.rs  keyshares.rs  point.rs  split.rs  test.rs
sssui-rs/src/sss_ed25519/: combine.rs  lagrange.rs  mod.rs  split.rs
sssui-rs/src/tests/: mod.rs
sssui-wasm/: README.md  package.json
sssui-wasm/src/: index.ts
sssui-wasm/wasm/: Cargo.toml
sssui-wasm/wasm/src/: lib.rs
sssui-wasm/wasm/src/sss/: combine.rs  split.rs
sssui-wasm/wasm/src/sss_ed25519/: combine.rs  split.rs
sssui/src/sss/: combine.rs  mod.rs  test.rs
