[workspace.package]
edition = "2021"
rust-version = "1.87.0"
version = "0.1.0"
authors = [
    "Jinwoo Lee <jinwoo@keplr.app>",
    "Hyeongsoo Kim <hyeongsoo@postech.ac.kr",
]
categories = ["cryptography"]
repository = "https://github.com/chemonoworld/sssui"
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "sssui-mpc-rs",
    "foundry-mpc-wasm/wasm",
    "frost-core",
    "frost-ed25519",
    "frost-rerandomized",
]

[workspace.dependencies]
criterion = "0.6"
document-features = "0.2.7"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
insta = { version = "1.31.0", features = ["yaml"] }
lazy_static = "1.4"
proptest = "1.0"
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
serde_json = "1.0"


sssui-mpc-rs = { path = "sssui-mpc-rs" }
frost-core = { path = "frost-core", version = "2.2.0", default-features = false }
frost-rerandomized = { path = "frost-rerandomized", version = "2.2.0", default-features = false }
frost-ed25519 = { path = "frost-ed25519", version = "2.2.0", default-features = false }


resolver = "2"
